--- a/tyler-scroll/index.html
+++ b/tyler-scroll/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Davidson College Career Outcomes 2021-2023</title>
     <link rel="icon" href="data:;base64,iVBORwOKGO=" />
@@ -10,7 +10,8 @@
     <div class="page">
         <h1>The Career Outcomes of Davidson College Graduates (2021-2023).</h1>
 
-        <p>This data represents reflects only those who responded to the survey asked by Davidson College..</p>
+        <p>This data represents reflects only those who responded to the survey asked by Davidson College.</p>
+        <p>Please scroll through this visualization to investigate the career outcomes of the survey respondents.</p>
         <!-- <div id="buttons-container"></div> -->
         <div class="container">
             <!-- <div id="map"></div> -->
