--- a/Davin-map/index.html
+++ b/Davin-map/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<title>Davidson College Career Outcomes 2021-2023</title>
 <link rel="stylesheet" href="css/style.css">
 <meta charset="utf-8">
 <script src="https://d3js.org/d3.v4.min.js"></script>
