changed map description

--- a/final-vis/map.html
+++ b/final-vis/map.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Davidson College Career Outcomes 2021-2023</title>
+    <title>The United States, graphed by the number of graduated Davidson students employed.</title>
     <link rel="icon" href="data:;base64,iVBORwOKGO=" />
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
