--- a/final-vis/map.html
+++ b/final-vis/map.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>The United States, graphed by the number of graduated Davidson students employed.</title>
+    <title>Davidson College Career Outcomes 2021-2023</title>
     <link rel="icon" href="data:;base64,iVBORwOKGO=" />
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body> 
     <div class="page">
-        <h1>The Career Outcomes of Davidson College Graduates (2021-2023).</h1>
+        <h1>The United States, graphed by the number of graduated Davidson students employed per state.</h1>
 
         <p>This data reflects only those who responded to the survey asked by Davidson College. Investigate a class of Davidson graduates by clicking the button and viewing the number of employed survey respondents in the map below.</p>
         <button class="navigate" onclick="window.location.href='index.html'">View Other Visualizations</button>
