--- a/final-vis/index.html
+++ b/final-vis/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Davidson College Career Outcomes 2021-2023</title>
     <link rel="icon" href="data:;base64,iVBORwOKGO=" />
